--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,4 @@
 services:
-  db:
-    image: postgres:16
-    environment:
-      POSTGRES_DB: numuw_chat
-      POSTGRES_USER: numuw
-      POSTGRES_PASSWORD: harambeeNyayo
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
   backend:
     build: ./backend
     command: python manage.py runserver 0.0.0.0:8000
@@ -15,8 +6,6 @@ services:
       - ./backend:/app
     ports:
       - "8000:8000"
-    depends_on:
-      - db
 
   frontend:
     build: ./frontend
@@ -26,6 +15,8 @@ services:
     ports:
       - "5173:5173"
     command: npm run dev -- --host
+    depends_on:
+      - backend
 
 volumes:
   postgres_data:
