--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "redux": "^5.0.1",
@@ -32,7 +33,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "node-sass": "^9.0.0",
     "postcss": "^8.4.40",
     "prettier": "^3.3.2",
     "sass": "^1.77.6",
