--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 jmespath==1.0.1
+pillow==10.4.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 s3transfer==0.10.2
