--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,16 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@reduxjs/toolkit": "^2.2.6",
     "framer-motion": "^11.2.13",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0"
+    "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
