--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,8 @@ asgiref==3.8.1
 asttokens==2.4.1
 boto3==1.34.140
 botocore==1.34.140
+channels==4.1.0
+channels-redis==4.2.0
 decorator==5.1.1
 Django==5.0.6
 django-cors-headers==4.4.0
@@ -12,6 +14,7 @@ ipython==8.26.0
 jedi==0.19.1
 jmespath==1.0.1
 matplotlib-inline==0.1.7
+msgpack==1.0.8
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.4.0
@@ -21,6 +24,7 @@ pure_eval==0.2.3
 Pygments==2.18.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
+redis==5.0.8
 s3transfer==0.10.2
 setuptools==69.5.1
 six==1.16.0
